--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
-            <version>2.20.44</version> <!-- ou a versão mais recente -->
+            <version>2.20.44</version>
         </dependency>
 
         <dependency>
